--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="This is my personal portfolio showcasing my skills."
     />
+    <link rel="icon" type="image/png" href="/favicon.svg" />
     <title>Portfolio | kViragova</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
